--- a/homepage/index.html
+++ b/homepage/index.html
@@ -23,7 +23,7 @@
         <div class="text">
           <h3>Professor</h3>
           <p>Choose one option</p>
-          <a href="file:///Users/saeyeon/Desktop/hiva/authorization.html">Join</a>
+          <a href="http://127.0.0.1:8080/registration-form/authorization.html">Join</a>
         </div>
       </div>
     </div>
@@ -35,7 +35,7 @@
         <div class="text">
           <h3>Student</h3>
           <p>Choose one option</p>
-          <a href="file:///Users/saeyeon/Desktop/hiva/authorization.html">Join</a>
+          <a href="http://127.0.0.1:8080/registration-form/authorization.html">Join</a>
         </div>
       </div>
     </div>
@@ -52,8 +52,8 @@
             <div class="modal-content">
               <span class="close">&times;</span>
               <p>Are you sure you are an admin?</p>
-              <a href="file:///Users/saeyeon/Desktop/hiva/authorization.html">Yes</a>
-              <a href="file:///Users/saeyeon/Desktop/hiva/index.html">No</a>
+              <a href="http://127.0.0.1:8080/registration-form/authorization.html">Yes</a>
+              <a href="http://127.0.0.1:8080/homepage/">No</a>
             </div>
           </div>
         </div>
@@ -62,20 +62,20 @@
   </div>
 </div>
 
-<div class="area" >
-            <ul class="circles">
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-            </ul>
-    </div >
+  <div class="area" >
+    <ul class="circles">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+  </div >
 
 <script src="./scriptt.js"></script>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
