--- a/registration-form/authorization.html
+++ b/registration-form/authorization.html
@@ -30,7 +30,7 @@
           </div>
         </fieldset>
         <a href="file:///Users/saeyeon/Desktop/hiva/dialog.html">
-        	<button type="submit" class="btn-login" onclick="location.href='file:///Users/saeyeon/Desktop/hiva/dialog.html'">Login</button>
+        	<button type="submit" class="btn-login" onclick="location.href='127.0.0.1:8080/dialog-box/dialog.html'">Login</button>
         </a>
       </form>
     </div>
@@ -55,7 +55,7 @@
             <input id="signup-password-confirm" placeholder="1234" type="password" required>
           </div>
         </fieldset>
-        <button type="submit" class="btn-signup" onclick="location.href='file:///Users/saeyeon/Desktop/hiva/dialog.html'">Continue</button>
+        <button type="submit" class="btn-signup" onclick="location.href='127.0.0.1:8080/dialog-box/dialog.html'">Continue</button>
       </form>
     </div>
   </div>
