--- a/usertype/index.html
+++ b/usertype/index.html
@@ -21,10 +21,7 @@
             <div class="text">
               <h3>Professor</h3>
               <p>Choose one option</p>
-              <a
-                href="http://127.0.0.1:8080/registration-form/authorization.html"
-                >Join</a
-              >
+              <a href="https://saeyeon0.github.io/login/authorization">Join</a>
             </div>
           </div>
         </div>
@@ -36,10 +33,7 @@
             <div class="text">
               <h3>Student</h3>
               <p>Choose one option</p>
-              <a
-                href="http://127.0.0.1:8080/registration-form/authorization.html"
-                >Join</a
-              >
+              <a href="https://saeyeon0.github.io/login/authorization">Join</a>
             </div>
           </div>
         </div>
@@ -56,11 +50,10 @@
                 <div class="modal-content">
                   <span class="close">&times;</span>
                   <p>Are you sure you are an admin?</p>
-                  <a
-                    href="http://127.0.0.1:8080/registration-form/authorization.html"
+                  <a href="https://saeyeon0.github.io/login/authorization"
                     >Yes</a
                   >
-                  <a href="http://127.0.0.1:8080/homepage/">No</a>
+                  <a href="https://saeyeon0.github.io/home/homepage/home">No</a>
                 </div>
               </div>
             </div>
