--- a/homepage/home.html
+++ b/homepage/home.html
@@ -108,16 +108,18 @@
         </div>
     </div>
 
-    <div class="card h-100 text-center" id="about" style="width: 80rem; background-color: rgb(189, 213, 189); color: rgb(64, 75, 44); align-items: center;">
+    <div class="card h-100 text-center" id="about" style="width: 80rem; background: rgb(246,250,250);
+    background: radial-gradient(circle, rgba(246,250,250,1) 0%, rgba(199,228,240,1) 35%, rgba(141,216,244,1) 100%); color: rgb(26, 43, 69); align-items: center;">
         <div class="card-body">
-          <h3 class="card-title">About our Ala-Too University!</h3>
-          <h5 class="card-text">How to use?</h5>
-          <p class="card-text">1. Press Register above. <br>
-            2. Choose user type to login.<br>
-            3. Create an account.<br>
-            4. Add any input and output in dialog box!<br>
-            5. Now it's saved and the output will automatically come out after your input.<br>
-            6. Please enjoy!<br>
+          <h3 class="card-title">About us!</h3>
+          <h5 class="card-text">Some additional information about AIU</h5>
+          <p class="card-text" style="font-weight: bold">Beside professional and elective courses, university provides variety of sections!<br>
+            <ul class="section">
+                <li><b>Sport Sections:</b> footbal, basketball, voleyball, chess!</li>
+                <li><b>Elective Language Sections:</b> German, French, Chinese, Japanese</li>
+                <li><b>Creative Clubs:</b> Music, Dance, Komuz, Piano and etc</li>
+              </ul>
+              <p class="add">Access is free so any Ala-Too student can enroll at any time, they're welcomed!</p>
           </p>
         </div>
     </div>
@@ -125,49 +127,45 @@
     <div class="card mb-3 h-100" style="width: 80rem">
         <img class="card-img-top" src="alatoo.png" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          <h5 class="card-title">GATEWAY TO THE WORLD!</h5>
+          <p class="card-text">Hope you enjoyed using HIVA! Waiting for your creative input/output messgaes!</p>
         </div>
       </div>
 
       <footer class="text-center text-white position-fixed-bottom">
-        <!-- Grid container -->
-        <div class="footer-container p-4 pb-0">
-          <!-- Section: Social media -->
-          <section class="mb-4">
+        <div class="footer-container p-4">
+          <section class="mb-2">
 
-            <!-- Google -->
-            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-              ><i class="fa fa-google"></i
-            ></a>
-
-            <!-- telegram -->
-            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+            <a class="btn btn-outline-light btn-floating m-1" href="https://t.me/sye0n_n0" role="button"
               ><i class="fa fa-telegram"></i
             ></a>
 
-            <!-- Instagram -->
-            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+            <a class="btn btn-outline-light btn-floating m-1" href="https://instagram.com/sye0ns_s" role="button"
               ><i class="fa fa-instagram"></i
             ></a>
 
-            <!-- Github -->
-            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+            <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/Saeyeon0" role="button"
+              ><i class="fa fa-github"></i
+            ></a>
+
+            <a class="btn btn-outline-light btn-floating m-1" style="background-color:rgb(222, 160, 172)" href="https://t.me/ibrmvva" role="button"
+              ><i class="fa fa-telegram"></i
+            ></a>
+
+            <a class="btn btn-outline-light btn-floating m-1" style="background-color:rgb(222, 160, 172)" href="https://instagram.com/ibrmvva" role="button"
+              ><i class="fa fa-instagram"></i
+            ></a>
+
+            <a class="btn btn-outline-light btn-floating m-1" style="background-color:rgb(222, 160, 172)" href="https://github.com/ibrmva" role="button"
               ><i class="fa fa-github"></i
             ></a>
 
           </section>
-          <!-- Section: Social media -->
         </div>
-        <!-- Grid container -->
-      
-        <!-- Copyright -->
+
         <div class="footer-text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-          © 2020 Copyright:
-          <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+          © 2022 HIVA
         </div>
-        <!-- Copyright -->
       </footer>
 
     <script src="./home.js"></script>
