--- a/homepage/home.html
+++ b/homepage/home.html
@@ -95,7 +95,7 @@
             3. Create an account.<br>
             4. Press "Try It" below and the dialog box will pop out.<br>
             5. Now you can ask any questions and check out unique answers!<br>
-            6. If you want to add another output meassage to your input, you can leave a message in "Contact" from above.<br>
+            6. If you want to add another output message to your input, you can leave a message in "Contact" form above.<br>
             7. Please enjoy!<br>
           </p>
           <button id="myButton" class="btn">Try it!</button>
